--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,9 @@
 language: python
+
 python:
-  - "2.6"
-  - "2.7"
-  - "3.4"
-  - "3.5"
+
   - "3.6"
-  # PyPy versions
-  - "pypy2.7"
-  - "pypy3.5"
-# command to install dependencies
-install:
-  - pip install -r requirements.txt
-  - pip install .
-# command to run tests
-script: pytest
+
+script: 
+
+  - python ttt.py
