--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-$ pip freeze > requirements.txt
- 
-# installing dependencies from file
-$ pip install -r requirements.txt
+pip freeze > requirements.txt
+
+pip install -r requirements.txt
