--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ python:
 
   - "3.6"
 cache: pip
-install:
+before_script:
+  - easy_install distribute
   - pip install -r requirements.txt
 script: 
 - python ttt.py
