--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-pip freeze > requirements.txt
-
-
-
-1
-2
-3
-4
-5
-6
-7
-8
-
+python (>= 2.7, << 3.7)
+pyreadline
+pyserial (>= 2.6)
+wxPython (>= 2.8, << 4.0)
+numpy (>= 1.8.2)
+pyglet (>= 1.1)
+pycairo (>= 1.8.8)
+cairosvg (>= 1.0.9, << 2)
+psutil (>= 2.1)
+dbus-python (>= 1.2.0)
+pygobject (>= 3.14.0)
+libxml2 (>= 2.9.1)
+appdirs (>= 1.4.0)
