--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,9 @@
-python (>= 2.7, << 3.7)
-pyreadline
-pyserial (>= 2.6)
-wxPython (>= 2.8, << 4.0)
-numpy (>= 1.8.2)
-pyglet (>= 1.1)
-pycairo (>= 1.8.8)
-cairosvg (>= 1.0.9, << 2)
-psutil (>= 2.1)
-dbus-python (>= 1.2.0)
-pygobject (>= 3.14.0)
-libxml2 (>= 2.9.1)
-appdirs (>= 1.4.0)
+Flask==0.10.1
+Flask-SQLAlchemy==1.0
+Flask-WTF==0.9.4
+Jinja2==2.7.3
+MarkupSafe==0.23
+SQLAlchemy==0.9.9
+WTForms==1.0.5
+Werkzeug==0.10.1
+itsdangerous==0.24
