--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,10 @@ language: python
 python:
   - "3.6"
 cache: pip
+install:
+  - pip install flake8 .
 before_script:
+  - "flake8 --show-source --builtins=_ Teradata"
   - easy_install distribute
   - pip install -r requirements.txt
 script: 
