--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,5 @@ before_script:
   - easy_install distribute
   - pip install -r requirements.txt
 script: 
-- python ttt.py
+  - python ttt.py
+  - python hello.py
