--- a/codecov.yml
+++ b/codecov.yml
@@ -1,21 +1,15 @@
-comment: false
+sudo: false
 
-coverage:
-  status:
-    project:
-      default:
-        # Commits pushed to master should not make the overall
-        # project coverage decrease by more than 1%:
-        target: auto
-        threshold: 1%
-    patch:
-      default:
-        # Be tolerant on slight code coverage diff on PRs to limit
-        # noisy red coverage status on github PRs.
-        # Note The coverage stats are still uploaded
-        # to codecov so that PR reviewers can see uncovered lines
-        # in the github diff if they install the codecov browser
-        # extension:
-        # https://github.com/codecov/browser-extension
-        target: auto
-        threshold: 1%
+language: python
+
+python:
+  - 2.7
+
+install:
+  - pip install codecov
+
+script:
+  - coverage run tests.py
+
+after_success:
+  - codecov
